[GStreamer] Never call updateTracks if running on legacy pipeline https://bugs.webkit.org/show_bug.cgi?id=184581

Source/WebCore:

This makes sure failling code path is never reached in the conditions where it should not have been reached.

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-05-09
Reviewed by Philippe Normand.

Re enables all tests that were disabled after fixing.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

LayoutTests:

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-05-09
Reviewed by Philippe Normand.

https://bugs.webkit.org/show_bug.cgi?id=185252

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/200970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231600 268f45cc-cd09-0410-ab3c-d52691b4dbfc